package exp8;
//@Author：ranxing
//@Time：2022/10/20   8:40
//@File：Alarm.java

public class Alarm {
    public void on(){
        System.out.println("警报器打开");
    }
    public void close(){
        System.out.println("警报器关闭");
    }
}
