package exp8;
//@Author：ranxing
//@Time：2022/10/20   8:40
//@File：Camera.java

public class Camera {
    public void on(){
        System.out.println("录像机打开");
    }
    public void close(){
        System.out.println("录像机关闭");
    }
}
