package exp8;
//@Author：ranxing
//@Time：2022/10/20   8:40
//@File：Light.java

public class Light {
    public void on(){
        System.out.println("灯打开");
    }
    public void close(){
        System.out.println("灯关闭");
    }
}
