package exp8;
//@Author：ranxing
//@Time：2022/10/20   8:40
//@File：Sensor.java

public class Sensor {
    public void on(){
        System.out.println("感应器打开");
    }
    public void close(){
        System.out.println("感应器关闭");
    }
}
